# MLSite

./: .gitignore  Cargo.toml
Backend/: .gitignore  Cargo.toml  README.md  permissions.txt
Backend/src/: database.rs  forum_handlers.rs  handlers.rs  helpers.rs  keystore.rs  login_handlers.rs  main.rs  models.rs  news_post_handlers.rs  permission.rs  user_handlers.rs  userdata.rs
Frontend/: ember-cli-build.js  package-lock.json  package.json
Frontend/app/: index.html  router.js
Frontend/app/adapters/: application.js  auth-header.js  auth.js  news-post-model.js
Frontend/app/authenticators/: auth.js
Frontend/app/components/: admin-panel-header.js  canvas-comp.js  error-comp.js  forum-category.js  forum-status-bar.js  forum-thread-listing.js  login-display.js  news-post.js  post-list.js  post-to-forums.js  register-form.js  search-user.js  sign-in-form.js  sign-in-or-logout-link.js  slim-profile.js  staff-user-view.js  text-editor.js  user-profile.js
Frontend/app/models/: email-request.js  news-post-model.js  user.js
Frontend/app/routes/: admin-panel.js  create-news-post.js  error.js  home.js  index.js  profile.js  register.js  sign-in.js
Frontend/app/serializers/: news-post-model.js
Frontend/app/services/: admin-priv.js  auth-service.js  current-date.js  math.js  uuid-to-username.js
Frontend/app/styles/: admin-css.scss  app.scss  constants.scss  forum-post.scss  forum.scss  home.scss  news-post.scss  page-control.scss  profile.scss  sign-in.scss  (+1 more)
Frontend/config/: environment.js
src/: connection.rs  database.rs  handlers.rs  main.rs  models.rs
(+88 files in other folders)
