[package]
name = "backend"
version = "0.1.0"
authors = ["Dalton <dolphindalt@gmail.com>"]

[dependencies]
bson = "0.10.0"
mongodb = "0.3.7"
iron = "0.6"
router = "0.6"
rustc-serialize = "0.3"
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }
serde_derive = "1.0.27"
serde = "1.0.27"
serde_json = "1.0.10"
unicase = "*"
rust-crypto = "^0.2"